apps/homepage/ingress-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-kong
  namespace: homepage
spec:
  ingressClassName: kong
  rules:
    - host: homepage.algovn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port: { number: 80 }
  tls:
    - hosts: [homepage.algovn.com]
